--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <a href="#" class="cabecalho__logo"><img src="./assets/logo.svg" alt="Logo do CodeChella"></a>
+        <a href="./main.html" class="cabecalho__logo"><img src="./assets/logo.svg" alt="Logo do CodeChella"></a>
         <input type="checkbox" id="menu" class="cabecalho__botao">
         <label for="menu" class="menu__rotulo">                
             <span class="cabecalho__menu-hamburguer"></span>
@@ -23,15 +23,15 @@
     
         <ul class="lista-menu">            
             <li class="lista-menu__item">
-                <a href="#" class="lista-menu__link">A experiência</a>                
+                <a href="./experiencia.html" class="lista-menu__link">A experiência</a>                
             </li>
             <li class="menu__linha"><img src="./assets/linha-menu.svg" alt=""></li>
             <li class="lista-menu__item">
-                <a href="#" class="lista-menu__link">Mapa de Setores</a>
+                <a href="./mapa-setores.html" class="lista-menu__link">Mapa de Setores</a>
             </li>
             <li class="menu__linha"><img src="./assets/linha-menu.svg" alt=""></li>
             <li class="lista-menu__item">
-                <a href="#" class="lista-menu__link">Informações</a>
+                <a href="./faq.html" class="lista-menu__link">Informações</a>
             </li>
             <li class="menu__linha"><img src="./assets/linha-menu.svg" alt=""></li>
             <li class="lista-menu__item">
@@ -52,7 +52,7 @@
                 <h2 class="sobre__titulo"> &lt; 11 e 12 de Março &gt; Aluródromo de São Paulo </h2>
                 <p class="sobre__texto">Hora de programar nossa memória com novas lembranças! Uma nova experiência sobre música, linguagens e, claro, tecnologia! Somos um festival diverso, com vários artistas e referências. Divirta-se!</p>
                 <div class="botao__ingresso">
-                    <a href="#" class="botao__ingresso-texto">Comprar ingresso!</a>
+                    <a href="./formulario.html" class="botao__ingresso-texto">Comprar ingresso!</a>
                     <img src="./assets/ticket-estrela.svg" alt="ingresso">
                 </div>
             </div>            
