--- a/experiencia.html
+++ b/experiencia.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <a href="./main.html" class="cabecalho__logo"><img src="./assets/logo.svg" alt="Logo do CodeChella"></a>
+        <a href="./index.html" class="cabecalho__logo"><img src="./assets/logo.svg" alt="Logo do CodeChella"></a>
         <input type="checkbox" id="menu" class="cabecalho__botao">
         <label for="menu" class="menu__rotulo">                
             <span class="cabecalho__menu-hamburguer"></span>
