Correção do caminho da imagem principal

--- a/mapa-setores.html
+++ b/mapa-setores.html
@@ -44,7 +44,7 @@
     </div>
     <main>
         <section class="mapa-evento">
-            <img src="../assets/mapa-setores.svg" alt="Mapa do evento" class="imagem-mapa">
+            <img src="./assets/mapa-setores.svg" alt="Mapa do evento" class="imagem-mapa">
             <ul class="mapa__legenda">
                 <li class="legenda__titulo">Legenda:</li>
                 <li class="legenda__item"><img src="./assets/legendas/legenda1.svg" class="legenda__imagem">Premium</li>
